--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,42 +28,34 @@ nav ul li{
     
 }
 
-@media (max-width:1000px){
-    .logo{
-        width: 140px;
-
-    }
-    nav ul li{
-        margin: 10px 15px;
-
-    }
+.menu-icon {
+  display: none;
+  width: 30px;
+  cursor: pointer;
 }
-@media (max-width: 840px){
-    nav{
-        padding: 15px 0;
-    }
-    nav ul{
-        position: fixed;
-        top: 0;
-        right: 0;
-        background: #212ea0;
-        z-index: -1;
-        width: 200px;
-        padding-top: 70px;
-        transition: 0.5s;
 
-    }
-    nav ul li{
-        display: block;
-        margin: 25px 40px;
-    }
-    .menu-icon{
-        display: block;
-        width: 30px;
-        cursor: pointer;
-    }
-    .hide-mobile-menu{
-        right: -200px;
-        
-    }
+/* Show menu icon on small screens (like mobile) */
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block;
+  }
+
+  ul {
+    display: none;
+    flex-direction: column;
+    background: #1122aa;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+    padding: 20px;
+    z-index: 1000;
+  }
+
+  ul.hide-mobile-menu {
+    display: none;
+  }
+
+  ul:not(.hide-mobile-menu) {
+    display: flex;
+  }
 }
