--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -5,7 +5,7 @@
     background: linear-gradient(rgba(8,0,58,0.7), rgba(103, 103, 188, 0.7)), url('../../assets/hero.png');
     background-size: cover;
     background-position: center;
-    color: #e4d6d6;
+    color: #dcdce5;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,16 +16,19 @@
     text-align: center;
     max-width: 800px;
     
+    
 }
 .hero-text h1{
     font-size: 60px;
     font-weight: 300;
+    
 
 }
 .hero-text p{
     max-width: 700px;
     margin: 10px auto 20px;
     line-height: 1.4;
+    
 
 }
 @media (max-width:850px){
