--- a/src/components/Campus/Campus.css
+++ b/src/components/Campus/Campus.css
@@ -38,7 +38,7 @@
 
 }
 .btn.dark-btn{
-  background: #ececef;
+  background: #4141d6;
   /* color: #212221;
   padding: 14px 25px;
   font-size: 16px;
